[tool.poetry]
name = "rdme"
version = "0.1.0"
description = "A tool that helps you compose READMEs"
authors = ["mental <m3nta1@yahoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
